# aihds

./: .gitignore  .gitmodules  Cargo.toml  README..md  README.md  config.toml  decision_tree.tex  decision_tree_example.tex  package-lock.json
dissertation/: .tex  dissertation.acn  dissertation.acr  dissertation.alg  dissertation.aux  dissertation.bbl  dissertation.blg  dissertation.fdb_latexmk  dissertation.fls  dissertation.glsdefs  dissertation.ist  dissertation.lof  dissertation.lot  dissertation.sty  dissertation.tex  dissertation.toc  glossary.tex  library.bib
dissertation/def/: title.tex
dissertation/parts/: abstract.aux  abstract.tex  acks.aux  acks.tex  resumo.aux  resumo.tex  soi.aux  soi.tex
dissertation/parts/appendix/: docs.aux  docs.tex  feature_selection.aux  feature_selection.tex  graphs.aux  graphs.tex  tools.tex
dissertation/parts/conclusion/: conclusion.aux  conclusion.tex  futurework.aux  futurework.tex  nextsteps.tex
dissertation/parts/core/: contrib.aux  contrib.tex  datasets.aux  datasets.tex  ids.aux  ids.tex  results.aux  results.tex
dissertation/parts/introduction/: background.aux  background.tex  intro.aux  intro.tex  (+2 more)
src/: convert_to_libsvm.py  dataset.rs  ids.rs  main.rs  model.rs  server.rs
src/dataset/: load.rs
src/model/: svm.rs
tools/: can_speed.py  feature_selection.py  get_ids.py  graph.py  locate.py  log_to_csv.py  plot_n_ids_performance.py  plot_reducing_ids.py  power_plot.py
webapp/: app.js  package-lock.json  package.json
webapp/routes/: dashboard.js
webapp/views/: dashboard.jade  dashboard.pug  layout.pug
(+5 files in other folders)
