[package]
name = "aihds"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0", features = ["vendored"] }
csv = "1"
clap = { version = "3", features = ["derive"]}
linfa = "0"
linfa-svm = {version = "0", features = ["serde"]}
ndarray = "0"
ndarray-stats = "0"
bincode = "1"
serde = "1"
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
socketcan = "1"
chrono = "0"